--- a/Readme
+++ b/Readme
@@ -5,6 +5,10 @@ Install
 3. chmod 755 sprunge
 4. sudo cp sprunge /usr/local/bin/
 
+inline:
+
+git clone git://github.com/metral/sprunge.git ; cd sprunge ; chmod 755 sprunge ; sudo cp sprunge /usr/local/bin/
+
 Usage
 ====
 
